src/CEGUI.Native/include/CEGUI/CEGUIWidgets.h

typedef struct CEGUI_C_ListboxItem_t* CEGUI_C_ListboxItem;
typedef enum CEGUI_C_WidgetKind
{
    CEGUI_C_WIDGET_WINDOW = 0,
    CEGUI_C_WIDGET_DEFAULT_WINDOW,
    CEGUI_C_WIDGET_BUTTON_BASE,
    CEGUI_C_WIDGET_PUSH_BUTTON,
    CEGUI_C_WIDGET_TOGGLE_BUTTON,
    CEGUI_C_WIDGET_RADIO_BUTTON,
    CEGUI_C_WIDGET_PROGRESS_BAR,
    CEGUI_C_WIDGET_EDITBOX,
    CEGUI_C_WIDGET_MULTI_LINE_EDITBOX,
    CEGUI_C_WIDGET_FRAME_WINDOW,
    CEGUI_C_WIDGET_TITLEBAR,
    CEGUI_C_WIDGET_TOOLTIP,
    CEGUI_C_WIDGET_DRAG_CONTAINER,
    CEGUI_C_WIDGET_CLIPPED_CONTAINER,
    CEGUI_C_WIDGET_SCROLLBAR,
    CEGUI_C_WIDGET_SLIDER,
    CEGUI_C_WIDGET_THUMB,
    CEGUI_C_WIDGET_SPINNER,
    CEGUI_C_WIDGET_COMBOBOX,
    CEGUI_C_WIDGET_COMBO_DROP_LIST,
    CEGUI_C_WIDGET_LISTBOX,
    CEGUI_C_WIDGET_MULTI_COLUMN_LIST,
    CEGUI_C_WIDGET_LIST_HEADER,
    CEGUI_C_WIDGET_LIST_HEADER_SEGMENT,
    CEGUI_C_WIDGET_TREE,
    CEGUI_C_WIDGET_TAB_CONTROL,
    CEGUI_C_WIDGET_TAB_BUTTON,
    CEGUI_C_WIDGET_MENU_BASE,
    CEGUI_C_WIDGET_MENUBAR,
    CEGUI_C_WIDGET_POPUP_MENU,
    CEGUI_C_WIDGET_MENU_ITEM,
    CEGUI_C_WIDGET_SCROLLABLE_PANE,
    CEGUI_C_WIDGET_SCROLLED_CONTAINER,
    CEGUI_C_WIDGET_LAYOUT_CONTAINER,
    CEGUI_C_WIDGET_LAYOUT_CELL,
    CEGUI_C_WIDGET_SEQUENTIAL_LAYOUT_CONTAINER,
    CEGUI_C_WIDGET_HORIZONTAL_LAYOUT_CONTAINER,
    CEGUI_C_WIDGET_VERTICAL_LAYOUT_CONTAINER,
    CEGUI_C_WIDGET_GRID_LAYOUT_CONTAINER,
    CEGUI_C_WIDGET_ITEM_ENTRY,
    CEGUI_C_WIDGET_ITEM_LIST_BASE,
    CEGUI_C_WIDGET_SCROLLED_ITEM_LIST_BASE,
    CEGUI_C_WIDGET_ITEM_LISTBOX,
    CEGUI_C_WIDGET_GROUP_BOX,
    CEGUI_C_WIDGET_ROUND_IMAGE,
    CEGUI_C_WIDGET_SLOT_IMAGE_ITEM
} CEGUI_C_WidgetKind;
typedef enum CEGUI_C_WidgetComponent
{
    CEGUI_C_COMPONENT_FRAME_TITLEBAR = 0,
    CEGUI_C_COMPONENT_FRAME_CLOSE_BUTTON,
    CEGUI_C_COMPONENT_COMBOBOX_EDITBOX,
    CEGUI_C_COMPONENT_COMBOBOX_BUTTON,
    CEGUI_C_COMPONENT_COMBOBOX_DROP_LIST,
    CEGUI_C_COMPONENT_SCROLLBAR_INCREASE_BUTTON,
    CEGUI_C_COMPONENT_SCROLLBAR_DECREASE_BUTTON,
    CEGUI_C_COMPONENT_SCROLLBAR_THUMB,
    CEGUI_C_COMPONENT_SLIDER_THUMB,
    CEGUI_C_COMPONENT_LISTBOX_VERTICAL_SCROLLBAR,
    CEGUI_C_COMPONENT_LISTBOX_HORIZONTAL_SCROLLBAR,
    CEGUI_C_COMPONENT_MULTICOLUMN_LIST_HEADER,
    CEGUI_C_COMPONENT_MULTICOLUMN_VERTICAL_SCROLLBAR,
    CEGUI_C_COMPONENT_MULTICOLUMN_HORIZONTAL_SCROLLBAR,
    CEGUI_C_COMPONENT_MULTILINE_VERTICAL_SCROLLBAR,
    CEGUI_C_COMPONENT_MULTILINE_HORIZONTAL_SCROLLBAR,
    CEGUI_C_COMPONENT_SCROLLABLE_CONTENT_PANE,
    CEGUI_C_COMPONENT_SCROLLABLE_VERTICAL_SCROLLBAR,
    CEGUI_C_COMPONENT_SCROLLABLE_HORIZONTAL_SCROLLBAR,
    CEGUI_C_COMPONENT_GROUPBOX_CONTENT_PANE,
    CEGUI_C_COMPONENT_TOOLTIP_TARGET,
    CEGUI_C_COMPONENT_DRAG_DROP_TARGET,
    CEGUI_C_COMPONENT_SPINNER_EDITBOX,
    CEGUI_C_COMPONENT_SPINNER_INCREASE_BUTTON,
    CEGUI_C_COMPONENT_SPINNER_DECREASE_BUTTON,
    CEGUI_C_COMPONENT_SCROLLED_ITEM_VERTICAL_SCROLLBAR,
    CEGUI_C_COMPONENT_SCROLLED_ITEM_HORIZONTAL_SCROLLBAR,
    CEGUI_C_COMPONENT_TAB_BUTTON_PANE
} CEGUI_C_WidgetComponent;
typedef enum CEGUI_C_WidgetAction
{
    CEGUI_C_ACTION_PROGRESS_STEP = 0,
    CEGUI_C_ACTION_FRAME_TOGGLE_ROLLUP,
    CEGUI_C_ACTION_TOOLTIP_RESET_TIMER,
    CEGUI_C_ACTION_TOOLTIP_POSITION_SELF,
    CEGUI_C_ACTION_TOOLTIP_SIZE_SELF,
    CEGUI_C_ACTION_COMBOBOX_SHOW_DROP_LIST,
    CEGUI_C_ACTION_COMBOBOX_HIDE_DROP_LIST,
    CEGUI_C_ACTION_LISTBOX_RESET,
    CEGUI_C_ACTION_LISTBOX_CLEAR_SELECTIONS,
    CEGUI_C_ACTION_COMBOBOX_RESET_LIST,
    CEGUI_C_ACTION_COMBOBOX_CLEAR_SELECTIONS,
    CEGUI_C_ACTION_MULTICOLUMN_RESET,
    CEGUI_C_ACTION_MULTICOLUMN_CLEAR_SELECTIONS,
    CEGUI_C_ACTION_TREE_RESET,
    CEGUI_C_ACTION_TREE_CLEAR_SELECTIONS,
    CEGUI_C_ACTION_ITEMLIST_RESET,
    CEGUI_C_ACTION_ITEMLISTBOX_CLEAR_SELECTIONS,
    CEGUI_C_ACTION_ITEMLISTBOX_SELECT_ALL,
    CEGUI_C_ACTION_LAYOUT_MARK_DIRTY,
    CEGUI_C_ACTION_LAYOUT_NOW,
    CEGUI_C_ACTION_LAYOUT_IF_NEEDED,
    CEGUI_C_ACTION_POPUP_OPEN,
    CEGUI_C_ACTION_POPUP_CLOSE,
    CEGUI_C_ACTION_MENUITEM_OPEN_POPUP,
    CEGUI_C_ACTION_MENUITEM_CLOSE_POPUP
} CEGUI_C_WidgetAction;
/* Widget discovery and common sub-components. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetWidgetKind(CEGUI_C_Window window, CEGUI_C_WidgetKind* out_kind);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Widget_GetComponent(CEGUI_C_Window window, CEGUI_C_WidgetComponent component, CEGUI_C_Window* out_window);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Widget_ExecuteAction(CEGUI_C_Window window, CEGUI_C_WidgetAction action);
/* ListboxTextItem. Items created with auto_delete=false remain caller-owned. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxTextItem_Create(const char* text_utf8, uint32_t id, CEGUI_C_Bool disabled, CEGUI_C_Bool auto_delete, CEGUI_C_ListboxItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_Destroy(CEGUI_C_ListboxItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_GetText(CEGUI_C_ListboxItem item, const char** out_text_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_SetText(CEGUI_C_ListboxItem item, const char* text_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_GetID(CEGUI_C_ListboxItem item, uint32_t* out_id);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_SetID(CEGUI_C_ListboxItem item, uint32_t id);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_GetUserData(CEGUI_C_ListboxItem item, uintptr_t* out_data);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_SetUserData(CEGUI_C_ListboxItem item, uintptr_t data);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_IsSelected(CEGUI_C_ListboxItem item, CEGUI_C_Bool* out_value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_SetSelected(CEGUI_C_ListboxItem item, CEGUI_C_Bool value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_IsDisabled(CEGUI_C_ListboxItem item, CEGUI_C_Bool* out_value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_SetDisabled(CEGUI_C_ListboxItem item, CEGUI_C_Bool value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_IsAutoDeleted(CEGUI_C_ListboxItem item, CEGUI_C_Bool* out_value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_SetAutoDeleted(CEGUI_C_ListboxItem item, CEGUI_C_Bool value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxTextItem_SetFont(CEGUI_C_ListboxItem item, const char* font_name_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListboxItem_SetSelectionBrushImage(CEGUI_C_ListboxItem item, const char* image_name_utf8);
/* Listbox and Combobox item collections. Returned items are borrowed. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Listbox_GetItemCount(CEGUI_C_Window window, size_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Listbox_GetSelectedCount(CEGUI_C_Window window, size_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Listbox_GetItemAt(CEGUI_C_Window window, size_t index, CEGUI_C_ListboxItem* out_item);