src/CEGUI.Native/include/CEGUI/CEGUIC.h

typedef struct CEGUI_C_Window_t* CEGUI_C_Window;
typedef struct CEGUI_C_EventConnection_t* CEGUI_C_EventConnection;
typedef int32_t CEGUI_C_Bool;
typedef enum CEGUI_C_Result
{
    CEGUI_C_RESULT_SUCCESS = 0,
    CEGUI_C_RESULT_INVALID_ARGUMENT = 1,
    CEGUI_C_RESULT_NOT_INITIALISED = 2,
    CEGUI_C_RESULT_CEGUI_EXCEPTION = 3,
    CEGUI_C_RESULT_STD_EXCEPTION = 4,
    CEGUI_C_RESULT_UNKNOWN_EXCEPTION = 5,
    CEGUI_C_RESULT_NOT_SUPPORTED = 6
} CEGUI_C_Result;
typedef struct CEGUI_C_UVector2
{
    CEGUI_C_UDim x;
    CEGUI_C_UDim y;
} CEGUI_C_UVector2;
typedef struct CEGUI_C_USize
{
    CEGUI_C_UDim width;
    CEGUI_C_UDim height;
} CEGUI_C_USize;
typedef CEGUI_C_Bool (CEGUI_C_CALL *CEGUI_C_EventCallback)(
    const CEGUI_C_EventData* event_data,
    void* user_data);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetChild(
    CEGUI_C_Window window, const char* name_path_utf8, CEGUI_C_Window* out_child);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetChildRecursive(
    CEGUI_C_Window window, const char* name_utf8, CEGUI_C_Window* out_child);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetChildCount(
    CEGUI_C_Window window, size_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetChildAtIndex(
    CEGUI_C_Window window, size_t index, CEGUI_C_Window* out_child);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SetVisible(
    CEGUI_C_Window window, CEGUI_C_Bool visible);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_IsVisible(
    CEGUI_C_Window window, CEGUI_C_Bool* out_visible);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SetEnabled(
    CEGUI_C_Window window, CEGUI_C_Bool enabled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_IsEnabled(
    CEGUI_C_Window window, CEGUI_C_Bool* out_enabled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_Activate(CEGUI_C_Window window);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_Deactivate(CEGUI_C_Window window);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_IsActive(
    CEGUI_C_Window window, CEGUI_C_Bool* out_active);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SetPosition(
    CEGUI_C_Window window, CEGUI_C_UVector2 position);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetPosition(
    CEGUI_C_Window window, CEGUI_C_UVector2* out_position);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SetSize(
    CEGUI_C_Window window, CEGUI_C_USize size);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetSize(
    CEGUI_C_Window window, CEGUI_C_USize* out_size);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SetArea(
    CEGUI_C_Window window, CEGUI_C_UVector2 position, CEGUI_C_USize size);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SetAlpha(
    CEGUI_C_Window window, float alpha);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetAlpha(
    CEGUI_C_Window window, float* out_alpha);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SetID(
    CEGUI_C_Window window, uint32_t id);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetID(
    CEGUI_C_Window window, uint32_t* out_id);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SetFont(
    CEGUI_C_Window window, const char* font_name_utf8);
/* Events. The returned connection owns the subscription and must be released. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SubscribeEvent(
    CEGUI_C_Window window,
    const char* event_name_utf8,
    CEGUI_C_EventCallback callback,
    void* user_data,
    CEGUI_C_EventConnection* out_connection);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_EventConnection_IsConnected(
    CEGUI_C_EventConnection connection,
    CEGUI_C_Bool* out_connected);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_EventConnection_Disconnect(
    CEGUI_C_EventConnection connection);
CEGUI_C_API void CEGUI_C_CALL CEGUI_C_EventConnection_Release(
    CEGUI_C_EventConnection connection);
/* Common typed widget helpers. Each function validates the native widget type. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ProgressBar_SetProgress(
    CEGUI_C_Window window, float progress);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ProgressBar_GetProgress(
    CEGUI_C_Window window, float* out_progress);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ToggleButton_SetSelected(
    CEGUI_C_Window window, CEGUI_C_Bool selected);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ToggleButton_IsSelected(
    CEGUI_C_Window window, CEGUI_C_Bool* out_selected);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Editbox_SetReadOnly(
    CEGUI_C_Window window, CEGUI_C_Bool read_only);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Editbox_IsReadOnly(
    CEGUI_C_Window window, CEGUI_C_Bool* out_read_only);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Editbox_SetMaxTextLength(
    CEGUI_C_Window window, size_t max_length);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Editbox_GetMaxTextLength(
    CEGUI_C_Window window, size_t* out_max_length);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Editbox_SetSelection(
    CEGUI_C_Window window, size_t start, size_t end);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Editbox_GetSelection(
    CEGUI_C_Window window, size_t* out_start, size_t* out_end);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Slider_SetCurrentValue(
    CEGUI_C_Window window, float value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Slider_GetCurrentValue(
    CEGUI_C_Window window, float* out_value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Slider_SetMaxValue(
    CEGUI_C_Window window, float value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Slider_GetMaxValue(
    CEGUI_C_Window window, float* out_value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Scrollbar_SetScrollPosition(
    CEGUI_C_Window window, float value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Scrollbar_GetScrollPosition(
    CEGUI_C_Window window, float* out_value);