managed/CEGUI.Managed/NativeMethods.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetChild(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string namePath,
        out IntPtr child);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetChildRecursive(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out IntPtr child);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetChildCount(IntPtr window, out UIntPtr count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetChildAtIndex(IntPtr window, UIntPtr index, out IntPtr child);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SetVisible(IntPtr window, int visible);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_IsVisible(IntPtr window, out int visible);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SetEnabled(IntPtr window, int enabled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_IsEnabled(IntPtr window, out int enabled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_Activate(IntPtr window);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_Deactivate(IntPtr window);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_IsActive(IntPtr window, out int active);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SetPosition(IntPtr window, UVector2 position);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetPosition(IntPtr window, out UVector2 position);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SetSize(IntPtr window, USize size);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetSize(IntPtr window, out USize size);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SetArea(IntPtr window, UVector2 position, USize size);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SetAlpha(IntPtr window, float alpha);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetAlpha(IntPtr window, out float alpha);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SetID(IntPtr window, uint id);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetID(IntPtr window, out uint id);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SetFont(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string fontName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SubscribeEvent(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string eventName,
        EventCallback callback,
        IntPtr userData,
        out IntPtr connection);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_EventConnection_IsConnected(IntPtr connection, out int connected);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_EventConnection_Disconnect(IntPtr connection);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void CEGUI_C_EventConnection_Release(IntPtr connection);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ProgressBar_SetProgress(IntPtr window, float progress);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ProgressBar_GetProgress(IntPtr window, out float progress);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ToggleButton_SetSelected(IntPtr window, int selected);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ToggleButton_IsSelected(IntPtr window, out int selected);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Editbox_SetReadOnly(IntPtr window, int readOnly);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Editbox_IsReadOnly(IntPtr window, out int readOnly);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Editbox_SetMaxTextLength(IntPtr window, UIntPtr maxLength);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Editbox_GetMaxTextLength(IntPtr window, out UIntPtr maxLength);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Editbox_SetSelection(IntPtr window, UIntPtr start, UIntPtr end);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Editbox_GetSelection(IntPtr window, out UIntPtr start, out UIntPtr end);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Slider_SetCurrentValue(IntPtr window, float value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Slider_GetCurrentValue(IntPtr window, out float value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Slider_SetMaxValue(IntPtr window, float value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Slider_GetMaxValue(IntPtr window, out float value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Scrollbar_SetScrollPosition(IntPtr window, float value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Scrollbar_GetScrollPosition(IntPtr window, out float value);

    // BEGIN GENERATED WIDGET INTEROP
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetWidgetKind(IntPtr window, out WidgetKind out_kind);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Widget_GetComponent(
        IntPtr window,
        WidgetComponent component,
        out IntPtr out_window);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Widget_ExecuteAction(IntPtr window, WidgetAction action);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxTextItem_Create(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text_utf8,
        uint id,
        int disabled,
        int auto_delete,
        out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_Destroy(IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_GetText(IntPtr item, out IntPtr out_text_utf8);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_SetText(
        IntPtr item,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text_utf8);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_GetID(IntPtr item, out uint out_id);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_SetID(IntPtr item, uint id);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_GetUserData(IntPtr item, out UIntPtr out_data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_SetUserData(IntPtr item, UIntPtr data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_IsSelected(IntPtr item, out int out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_SetSelected(IntPtr item, int value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_IsDisabled(IntPtr item, out int out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_SetDisabled(IntPtr item, int value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_IsAutoDeleted(IntPtr item, out int out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_SetAutoDeleted(IntPtr item, int value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxTextItem_SetFont(
        IntPtr item,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string font_name_utf8);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListboxItem_SetSelectionBrushImage(
        IntPtr item,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string image_name_utf8);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Listbox_GetItemCount(IntPtr window, out UIntPtr out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Listbox_GetSelectedCount(IntPtr window, out UIntPtr out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Listbox_GetItemAt(
        IntPtr window,
        UIntPtr index,
        out IntPtr out_item);
